Update TuningApplier.java